# HIBF-hashing

./: CMakeLists.txt  README.md
.github/workflows/: ci_coverage.yml
cmake/: package-lock.cmake
cmake/test/: add_local_data.cmake  config.cmake  declare_datasource.cmake
include/: configuration.hpp  dna4_traits.hpp  hash_utils.hpp  index_data.hpp
include/contrib/: syncmer.hpp
include/search/: run_search.hpp  search.hpp
src/: CMakeLists.txt  compare.py  main.cpp
src/search/: run_search.cpp  search.cpp
test/: CMakeLists.txt  cli_fastq_coversion_test.cpp  syncmer_example.cpp
test/benchmark/: compare.py
test/benchmark/output/: hibf_benchmark_results.txt  search_kmer_list_error2.txt  search_minimiser_list_error2.txt  search_syncmer_file_list.txt  search_syncmer_list_error2.txt
test/data/: 15_11_2.index  20_20_version2.index  20_24_version2.index  file_list.txt  file_list_for_tests.txt  file_test1.fasta  file_test2.fasta  file_test3.fasta  list.txt  provided_list_files.txt  reads.fasta  search_test.txt  syncmer.index  test_search_kmer.txt  test_search_minimiser.txt  test_search_syncmer.txt
test/data/compare/: hibf_benchmark_results.csv  hibf_benchmark_results.txt  search_syncmer_provided_list_files.txt
test/data/provided/: 20_20.index  20_24.index  bin1.fa  bin2.fa  bin3.fa  bin4.fa  provided_files.txt  query.fq
test/search/: api_search_test.cpp  api_search_test_kmer.cpp  api_search_test_minimiser.cpp  cli_provided_data_test.cpp  cli_search_test.cpp  cli_search_test_kmer.cpp  cli_search_test_minimiser.cpp
